# NRZ

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  nrz.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.md  socket.yaml  tsconfig.json  vercel.json
.devcontainer/: Dockerfile
.github/: CODEOWNERS  nrz-orchestrator.yml  nrz-release.yml
.github/ISSUE_TEMPLATE/: 0-nrz-bug-report.yml  1-docs.yml  config.yml
.github/workflows/: bench-nrz.yml  lsp.yml  nrz-compare-cache-item.yml  nrz-library-release.yml  nrz-native-lib-test.yml  nrz-release.yml  nrz-test.yml  nrz-top-issues.yml  test-js-packages.yml  update-examples-on-release.yml
buildcontainer/: Makefile  README.md
cli/: Makefile  README.md  combined-shim.yml  nrz.json  package.json
crates/nrz-analytics/: Cargo.toml
crates/nrz-api-client/: Cargo.toml
crates/nrz-auth/: Cargo.toml
crates/nrz-cache/: Cargo.toml
crates/nrz-ci/: Cargo.toml
crates/nrz-dirs/: Cargo.toml
crates/nrz-env/: Cargo.toml
crates/nrz-errors/: Cargo.toml
crates/nrz-filewatch/: Cargo.toml
crates/nrz-fs/: Cargo.toml
crates/nrz-graph-utils/: Cargo.toml
crates/nrz-lib/: Cargo.toml  README.md  build.rs
crates/nrz-lockfiles/: Cargo.toml
crates/nrz-lsp/: Cargo.toml  readme.md
crates/nrz-lsp/src/: lib.rs  main.rs
crates/nrz-microfrontends/: Cargo.toml
crates/nrz-paths/: Cargo.toml
crates/nrz-repository/: Cargo.toml
crates/nrz-scm/: Cargo.toml  README.md
crates/nrz-trace/: Cargo.toml
docs/: package.json
examples/: package.json
nrz-tests/: README.md
(+541 files in other folders)
