[package]
name = "nrz-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["rustls-tls"]
native-tls = ["nrz-lib/native-tls"]
rustls-tls = ["nrz-lib/rustls-tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.4.0"
itertools.workspace = true
jsonc-parser = "0.23.0"
pidlock = { version = "0.1.4", path = "../nrz-pidlock" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
tokio-retry = "0.3.0"
tower-lsp = "0.20.0"
nrzpath = { version = "0.1.0", path = "../nrz-paths" }
nrz-lib = { version = "0.1.0", path = "../nrz-lib" }
nrz-repository = { version = "0.1.0", path = "../nrz-repository" }
wax.workspace = true
